@@ -14,9 +14,9 @@ AC_HEADER_STDC
 
 AC_ARG_ENABLE([gtk3],
     [AC_HELP_STRING([--enable-gtk3],
-        [compile galculator against gtk+ 3.0 (default: no)])],
+        [compile galculator against gtk+ 3.0 (default: yes)])],
     [enable_gtk3="${enableval}"],
-    [enable_gtk3="no"]
+    [enable_gtk3="yes"]
 )
 
 if test x"$enable_gtk3" = x"yes"; then
